<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:layout_marginTop="16dp"
        tools:context=".view.fragment.InstruccionesFragment">

        <include
            android:id="@+id/contentToolbar"
            layout="@layout/toolbar_instrucciones" />

        <TextView
            android:id="@+id/title1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tituloInstrucciones"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="102dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/description1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/descripcionInstrucciones1"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/title1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/title2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tituloInstrucciones2"
            android:textColor="@android:color/white"
            android:layout_marginTop="32dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/description1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/description2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/descripcionInstrucciones2"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/title2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/winningAnimation"
            android:layout_width="250dp"
            android:layout_height="257dp"
            android:src="@drawable/instrucciones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>